# MetaSimPy

./: .env.example  .gitignore  README.md  pyproject.toml
data/: agent_profiles.json  connections.json  locations.json  objects.json
metasimpy/core/: config.py  llm_factory.py
metasimpy/core/agents/: agent.py  interactions.py  registry.py  state_models.py
metasimpy/core/cognition/: memory.py
metasimpy/core/engine/: logging.py  timeline.py
metasimpy/core/world/: locations.py  map.py  objects.py  world_interactions.py  world_state.py
prompts/persons/: chloe_persona.txt  leo_persona.txt  maya_persona.txt  sam_persona.txt
prompts/system/: base_decision_prompt.txt
tests/core/agents/: test_agent.py  test_interactions.py  test_registry.py
tests/core/engine/: test_logging.py  test_timeline.py
