[project]
name = "metasimpy"
version = "0.1.0"
description = ""
authors = [
    {name = "Actify",email = "1276179128@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain (>=1.0.2,<2.0.0)",
    "langchain-community (>=0.4,<0.5)",
    "chromadb-client (>=1.1.1,<2.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic (>=2.12.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)"
]
